crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_start_in_alias.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "42"
---
nash::diagnostic

  × I was partway through parsing a type alias, but I got stuck here:
   ╭─[src/Main.nash:1:1]
 1 │ 42
   · ─
   ╰────
  help: I was expecting to see a type next. Try putting int or string for now?
