crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_start_in_custom_type.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: type box = Box 42
---
nash::syntax

  × Expected a type in the datatype declaration.
   ╭─[src/Main.nash:1:16]
 1 │ type box = Box 42
   ·                ─
   ╰────
  help: Write a type name or a quoted type variable, such as `'a`.
