crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_tuple_missing_end.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nf : (int, int\nf = 1"
---
  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:14]
 1 │ f : (int, int
   ·     ┬        ┬
   ·     │        ╰── expected `)`
   ·     ╰── opened here
 2 │ f = 1
   ╰────
  help: Add `)` here.
