crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__type_tuple_reserved_open.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: if
---
nash::diagnostic

  × I ran into a reserved word unexpectedly:
   ╭─[src/Main.nash:1:1]
 1 │ if
   · ──
   ╰────
  help: It looks like you are trying to use `if` as a variable name, but it is a
        reserved word. Try using a different name!
