crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__underindented_closing_delimiter_is_not_reported_missing.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "value = [()\n]"
---
nash::syntax::indentation

  × Closing `]` is underindented.
   ╭─[src/Main.nash:2:1]
 1 │ value = [()
   ·         ┬
   ·         ╰── opened here
 2 │ ]
   · ┬
   · ╰── underindented closing delimiter
   ╰────
  help: Indent `]` to continue this construct.
