crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__weird_end_close_paren.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nmodule Main exposing (..)\n\n)"
---
nash::diagnostic

  × I was not expecting to see a parenthesis here:
   ╭─[src/Main.nash:3:1]
 2 │ 
 3 │ )
   · ─
   ╰────
  help: This ) does not match up with an earlier open parenthesis. Try deleting it?
