crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__weird_end_comma.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: ","
---
  × Unexpected comma outside a collection.
   ╭─[src/Main.nash:1:1]
 1 │ ,
   · ─
   ╰────
  help: Remove it, or enclose the elements in a list, tuple, or record.
